# YubikeyAuth

./: README.md
HYubiKeyAuth/HYubiKeyAuth/: HYubiKeyAuth-Info.plist  HYubiKeyAuth.c
HYubiKeyAuth/HYubiKeyAuth.xcodeproj/: project.pbxproj
HYubiKeyFFI/: HYubiKeyFFI.cabal
HYubiKeyFFI/csrc/: HaskellExts.h  PAM.h  module_init.c  pam_hyubikey.c
HYubiKeyFFI/src/: HYubiKeyFFI.hs
HYubiKeyFFI/src/System/: PAM.chs
hyubikey/: hyubikey.cabal
hyubikey/csrc/: pam_hyubikey.c
hyubikey/src/: HYubikeyFFI.hs  Main.hs  PamYubiKey.hs
hyubikey/src/Codec/Binary/: CRC.hs  Hex.hs  ModHex.hs
hyubikey/src/Codec/Crypto/: YubiKeyOTP.hs
hyubikey/src/System/: PAM.chs
pam-hyubikey/: pam-hyubikey.cabal
pam-hyubikey/csrc/: HaskellExts.h  PAM.h  module_init.c  pam_hyubikey.c
pam-hyubikey/src/: HaskellExts.hs
