name:                HYubiKeyFFI
version:             0.1.0.0      
license:             MIT
license-file:        LICENSE
author:              Turing Eret
maintainer:          eret@lambdacalcul.us
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules: HYubiKeyFFI

  other-modules: System.PAM

  build-depends:    base

  hs-source-dirs: src

  ghc-options: -v

  build-tools:        c2hs

  default-language:    Haskell2010 
