name:                hyubikey
version:             0.1.0.0 
synopsis:            Library for verification of Yubikey OTPs. See https://developers.yubico.com/OTP      
license:             MIT
license-file:        LICENSE
author:              Turing Eret
maintainer:          eret@lambdacalcul.us
category:            Security
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  Codec.Crypto.YubiKeyOTP,
                    Codec.Binary.Hex,
                    Codec.Binary.ModHex,
                    Codec.Binary.CRC
  
  build-depends:      base,
                      AES,
                      bytestring,
                      word24,
                      dataenc

  hs-source-dirs:     src
  
  default-language:    Haskell2010

executable hyubikey
  main-is:             Main.hs

  build-depends:      base,
                      AES,
                      bytestring,
                      word24,
                      dataenc,
                      MissingH,
                      text-format-simple
  
  hs-source-dirs:     src

  default-language:    Haskell2010
  
executable pam_hyubikey.so
  build-depends:      base,
                      AES,
                      bytestring,
                      word24,
                      dataenc,
                      MissingH,
                      text-format-simple

  hs-source-dirs: src

  ghc-options: -optl-shared -optc-DMODULE=PAMYubiKey -no-hs-main

  main-is: PamYubiKey.hs

  c-sources: csrc/pam_hyubikey.c

  include-dirs: csrc

  install-includes: HaskellExts.h

  cc-options: -g -D_OPENPAM -DMODULE=PAMYubiKey -shared -std=gnu99

  ld-options: -shared

  extra-libraries:  pam

  frameworks:   CoreFoundation,
                OpenDirectory

  other-modules:  System.PAM

  build-tools:        c2hs

  default-language:    Haskell2010


