name:                pam-hyubikey
version:             0.1.0.0      
license:             MIT
license-file:        LICENSE
author:              Turing Eret
maintainer:          eret@lambdacalcul.us
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable pam_hyubikey.so
  build-depends:    base,
                    hyubikey

  hs-source-dirs: src

  ghc-options: -optl-shared -optc-DMODULE=PAMYubiKey -no-hs-main

  main-is: PamYubiKey.hs

  c-sources: csrc/pam_hyubikey.c

  include-dirs: csrc

  install-includes: HaskellExts.h

  cc-options: -g -D_OPENPAM -DMODULE=PAMYubiKey -shared -std=gnu99

  ld-options: -shared

  extra-libraries:  pam

  frameworks:   CoreFoundation,
                OpenDirectory

  other-modules:  System.PAM

  build-tools:        c2hs

  default-language:    Haskell2010
